[package]
name = "icebuilder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
ssh2 = "0.9.4"
